======= Version 0.2 ======================
2006-10-06 Don Scorgie <DonScorgie@Blueyonder.co.uk>

	* configure.ac:
	Bump version
	
	* src/MainWindow.py:
	Actually set the window icon properly.  No, really this time

	* src/Browser.py:
	Make 'Open' and 'Delete' buttons only sensitive when a map is selected

	* src/ImageThought.py:
	Gracefully handle case where image file isn't available (display empty thought)
	
	* src/MMapArea.py:
	When bad (unended) links are loaded, assume them to be broken and remove them properly
	
	* po/POTFILES.in:
	Add ImageThought as it now contains translatable strings

	* doc/TheFuture:
	Update for v0.2

	* doc/FileFormat:
	Add new file (incomplete) describing the save format for Labyrinth maps
	
	* doc/Makefile.am:
	Add FileFormat to EXTRA_DIST

	* src/MainWindow.py:
	* src/Browser.py:
	* src/labyrinth.py:
	Fix uninstalled mode.  Silence glade warning when not really a warning	

	* src/labyrinth.py:
	fix i18n stuff.  Hopefully.

2006-10-04 Don Scorgie <DonScorgie@Blueyonder.co.uk>

	* Browser.py:
	* MainWindow.py:
	Fix window icon

	* configure.ac:
	* src/MainWindow.py:
	* src/labyrinth.py:
	* src/DrawingThought.py:
	* src/Browser.py:
	* src/MMapArea.py:
	* src/ImageThought.py:
	* src/TextThought.py:
	* Makefile.am:
	* po/LINGUAS:
	* po/ChangeLog:
	* po/POTFILES.in:
	Add i18n framework.  Maybe.

	* src/Browser.py:
	Only activate 'Open' and 'Delete' when an item is selected
	
	* src/MMapArea.py:
	* src/MainWindow.py:	
	Set mode back properly when image is inserted
	
	* src/MMapArea.py:
	Only allow drawing in "Drawing" mode.  In edit mode, allow linking thoughts instead

	* src/Browser.py:
	* src/MainWindow.py:
	Set icon for browser and windows to be Labyrinth icon


2006-10-03 Don Scorgie <DonScorgie@Blueyonder.co.uk>

	* src/MainWindow.py:
	* src/BaseThought.py:
	* src/DrawingThought.py:
	* src/Links.py:
	* src/Makefile.am:
	* src/MMapArea.py:
	* src/ImageThought.py:
	* src/TextThought.py:
	* data/labyrinth-ui.xml: