@@ -1,3 +1,11 @@
+2006-10-08
+ Don Scorgie <DonScorgie@Blueyonder.co.uk>
+
+	* src/MainWindow.py:
+	* src/Browser.py:
+	Add missing strings to translations
+
+
 ======= Version 0.2 ======================
 2006-10-06 Don Scorgie <DonScorgie@Blueyonder.co.uk>
 
